--- a/python3/alpine/Dockerfile
+++ b/python3/alpine/Dockerfile
@@ -3,9 +3,10 @@ MAINTAINER Sergei Eremenko <https://github.com/SmartFinn>
 
 ENV LANG=C.UTF-8
 
-# http://bugs.alpinelinux.org/issues/5103
 RUN apk --no-cache add ca-certificates python3 \
- && python3 -m ensurepip \
- && pip3 --no-cache-dir install --upgrade pip setuptools
+ && pip3 --no-cache-dir install --upgrade pip setuptools \
+ && ln -sf "/usr/bin/idle3" "/usr/bin/idle" \
+ && ln -sf "/usr/bin/pydoc3" "/usr/bin/pydoc" \
+ && ln -sf "/usr/bin/python3" "/usr/bin/python"
 
 CMD ["python3"]
