--- a/python/alpine/Dockerfile
+++ b/python/alpine/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER Sergei Eremenko <https://github.com/SmartFinn>
 
 ENV LANG=C.UTF-8
 
-RUN apk --no-cache add ca-certificates python py-pip \
+RUN apk --no-cache add ca-certificates python2 py2-pip \
  && pip --no-cache-dir install --upgrade pip setuptools
 
 CMD ["python"]
