--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine:latest
-MAINTAINER Sergei Eremenko <https://github.com/SmartFinn>
+LABEL maintainer SmartFinn
 
 RUN apk --no-cache add nginx gettext \
  && ln -sf /dev/stdout /var/log/nginx/access.log \
