--- a/transmission/transmission.settings.json
+++ b/transmission/transmission.settings.json
@@ -43,6 +43,8 @@
     "rpc-authentication-required": false,
     "rpc-bind-address": "0.0.0.0",
     "rpc-enabled": true,
+    "rpc-host-whitelist": "*",
+    "rpc-host-whitelist-enabled": true,
     "rpc-password": "trasmission",
     "rpc-port": 9091,
     "rpc-url": "/transmission/",
