Update DockerHelper.mk file and related Makefiles

--- a/flexget/Makefile
+++ b/flexget/Makefile
@@ -1,10 +1,10 @@
--include ../../Dockerfile.mk
--include ../Dockerfile.mk
--include Dockerfile.mk
+-include ../../DockerHelper.mk
+-include ../DockerHelper.mk
+-include DockerHelper.mk
 
-OWNER   := smartfinn
-REPO    := flexget
-OPTIONS := \
+OWNER := smartfinn
+REPO  := flexget
+RUN_OPTIONS := \
 	--detach=true \
 	--publish=3539:3539 \
 	--restart=unless-stopped \
@@ -14,5 +14,5 @@ OPTIONS := \
 	--volume=/media:/media
 
 # create directory if not exist
-EXECUTE := $(shell test -d "${HOME}/.flexget" || \
+RUN_HOOK := $(shell test -d "${HOME}/.flexget" || \
 	mkdir -p "${HOME}/.flexget")
