--- a/redis/Makefile
+++ b/redis/Makefile
@@ -1,12 +1,12 @@
--include ../../Dockerfile.mk
--include ../Dockerfile.mk
--include Dockerfile.mk
+-include ../../DockerHelper.mk
+-include ../DockerHelper.mk
+-include DockerHelper.mk
 
 VOLUME_DATA := "$(HOME)/.redis"
 
-OWNER   := smartfinn
-REPO    := redis
-OPTIONS := \
+OWNER := smartfinn
+REPO  := redis
+RUN_OPTIONS := \
 	--detach=true \
 	--publish=6379:6379 \
 	--restart=unless-stopped \
@@ -15,5 +15,5 @@ OPTIONS := \
 	--volume=$(VOLUME_DATA):/data
 
 # create directory if not exist
-EXECUTE := $(shell test -d "${VOLUME_DATA}" || \
+RUN_HOOK := $(shell test -d "${VOLUME_DATA}" || \
 	mkdir -p "${VOLUME_DATA}")
