--- a/plexmediaserver/Makefile
+++ b/plexmediaserver/Makefile
@@ -1,19 +1,18 @@
--include ../../Dockerfile.mk
--include ../Dockerfile.mk
--include Dockerfile.mk
+-include ../../DockerHelper.mk
+-include ../DockerHelper.mk
+-include DockerHelper.mk
 
-OWNER   := smartfinn
-REPO    := plexmediaserver
-OPTIONS := \
+OWNER := smartfinn
+REPO  := plexmediaserver
+RUN_OPTIONS := \
 	--detach=true \
-	--net=host \
+	--publish=32400:32400
 	--restart=unless-stopped \
 	--user=$(shell id -u):$(shell id -g) \
 	--volume=/etc/localtime:/etc/localtime:ro \
 	--volume=$(HOME)/.plexmediaserver:/config \
 	--volume=/media:/media
-#	--publish=32400:32400
 
 # create directory if not exist
-EXECUTE := $(shell test -d "${HOME}/.plexmediaserver" \
+RUN_HOOK := $(shell test -d "${HOME}/.plexmediaserver" \
 	|| mkdir -p "${HOME}/.plexmediaserver")
