--- a/python3-alpine/Makefile
+++ b/python3-alpine/Makefile
@@ -1,6 +1,6 @@
--include ../../Dockerfile.mk
--include ../Dockerfile.mk
--include Dockerfile.mk
+-include ../../DockerHelper.mk
+-include ../DockerHelper.mk
+-include DockerHelper.mk
 
-OWNER   := smartfinn
-REPO    := python3-alpine
+OWNER := smartfinn
+REPO  := python3-alpine
