--- a/plexmediaserver/Makefile
+++ b/plexmediaserver/Makefile
@@ -6,7 +6,7 @@ OWNER := smartfinn
 REPO  := plexmediaserver
 RUN_OPTIONS := \
 	--detach=true \
-	--publish=32400:32400
+	--network=host \
 	--restart=unless-stopped \
 	--user=$(shell id -u):$(shell id -g) \
 	--volume=/etc/localtime:/etc/localtime:ro \
