Minor fixes to python3-alpine

--- a/python3-alpine/Dockerfile
+++ b/python3-alpine/Dockerfile
@@ -4,9 +4,9 @@ LABEL maintainer "SmartFinn (https://github.com/SmartFinn)"
 ENV LANG=C.UTF-8
 
 RUN apk --no-cache add ca-certificates python3 \
- && pip3 --no-cache-dir install --upgrade pip setuptools \
- && ln -sf "/usr/bin/pip3" "/usr/bin/pip" \
- && ln -sf "/usr/bin/pydoc3" "/usr/bin/pydoc" \
- && ln -sf "/usr/bin/python3" "/usr/bin/python"
+ && python3 -m pip --no-cache-dir install --upgrade pip setuptools \
+ && ln -sf /usr/bin/pip3 /usr/bin/pip \
+ && ln -sf /usr/bin/pydoc3 /usr/bin/pydoc \
+ && ln -sf /usr/bin/python3 /usr/bin/python
 
 CMD ["python3"]
