flexget: Added cloudscraper package for cfscraper plugin
https://flexget.com/Plugins/cfscraper

--- a/flexget/Dockerfile
+++ b/flexget/Dockerfile
@@ -1,7 +1,9 @@
 FROM smartfinn/python3-alpine:latest
 LABEL maintainer "SmartFinn (https://github.com/SmartFinn)"
 
-RUN pip --no-cache-dir install flexget transmissionrpc \
+RUN apk --no-cache add --virtual .build-deps build-base python3-dev \
+ && python3 -m pip --no-cache-dir install flexget cloudscraper transmissionrpc \
+ && apk --no-cache del .build-deps \
  && mkdir /config \
  && touch /config/config.yml \
  && chown -R nobody:nogroup /config
