--- a/flexget/Dockerfile
+++ b/flexget/Dockerfile
@@ -1,10 +1,13 @@
-FROM smartfinn/python3-alpine:latest
+FROM ubuntu:bionic
 LABEL maintainer "SmartFinn (https://github.com/SmartFinn)"
 
-RUN apk --no-cache add --virtual .build-deps build-base python3-dev libxml2-dev libxslt-dev \
- && apk --no-cache add libxml2 libxslt \
+ENV LANG=C.UTF-8
+
+RUN apt-get update \
+ && apt-get install -y --no-install-recommends python3-minimal python3-pip \
+ && rm -f /var/lib/apt/lists/*.* \
+ && python3 -m pip --no-cache-dir install --upgrade pip setuptools \
  && python3 -m pip --no-cache-dir install flexget cloudscraper transmissionrpc \
- && apk --no-cache del .build-deps \
  && mkdir /config \
  && touch /config/config.yml \
  && chown -R nobody:nogroup /config
