--- a/nginx/Makefile
+++ b/nginx/Makefile
@@ -2,16 +2,19 @@
 -include ../DockerHelper.mk
 -include DockerHelper.mk
 
+APP_DATA := $(HOME)/.config/nginx
+
 OWNER := smartfinn
 REPO  := nginx
 TAG   := latest
 RUN_OPTIONS := \
 	--detach=true \
-	--publish=80:80 \
+	--publish=80:80/tcp \
+	--publish=443:443/tcp \
 	--restart=unless-stopped \
 	--volume=/etc/localtime:/etc/localtime:ro \
-	--volume=$(HOME)/html:/usr/share/nginx/html:ro
+	--volume=$(APP_DATA):/etc/nginx/conf.d:ro
 
 # create directory if not exist
-RUN_HOOK := $(shell test -d "${HOME}/html" \
-	|| mkdir -m 775 -p "${HOME}/html")
+pre-run::
+	test -d "${APP_DATA}" || mkdir -m 775 -p "${APP_DATA}"
