--- a/python3-alpine/Makefile
+++ b/python3-alpine/Makefile
@@ -2,5 +2,4 @@
 -include ../DockerHelper.mk
 -include DockerHelper.mk
 
-OWNER := smartfinn
-REPO  := python3-alpine
+IMAGE := smartfinn/python3-alpine
