--- a/vpnbook2proxy/Makefile
+++ b/vpnbook2proxy/Makefile
@@ -7,6 +7,7 @@ RUN_OPTIONS := \
 	--detach=true \
 	--restart=unless-stopped \
 	--cap-add=NET_ADMIN \
+	--device=/dev/net/tun \
 	--publish=1080:1080 \
 	--env VPNBOOK_SERVER=US1 \
 	--dns 8.8.8.8 \
