flexget: fix building but not test it

--- a/flexget/Dockerfile
+++ b/flexget/Dockerfile
@@ -1,12 +1,26 @@
+FROM python:3 AS builder
+
+RUN python3 -m venv /app
+
+ENV PATH="/app/bin:$PATH" \
+    VIRTUAL_ENV="/app"
+
+RUN python3 -m pip --no-cache-dir install flexget transmission-rpc
+
 FROM python:3-slim
 LABEL maintainer "SmartFinn (https://github.com/SmartFinn)"
 
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    PATH="/app/bin:$PATH" \
+    VIRTUAL_ENV="/app"
+
+COPY --from=builder /app /app
 COPY rootfs/ /
 
 WORKDIR /config
 
-RUN python3 -m pip --no-cache-dir install flexget transmission-rpc \
- && touch /config/config.yml \
+RUN touch /config/config.yml \
  && chown -R nobody:nogroup /config
 
 USER nobody
