flexget: replace Dockerfile to tested one

--- a/flexget/Dockerfile
+++ b/flexget/Dockerfile
@@ -1,32 +1,26 @@
-FROM python:3 AS builder
-
-RUN python3 -m venv /app
-
-ENV PATH="/app/bin:$PATH" \
-    VIRTUAL_ENV="/app"
-
-RUN python3 -m pip --no-cache-dir install flexget transmission-rpc
-
 FROM python:3-slim
 LABEL maintainer "SmartFinn (https://github.com/SmartFinn)"
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1 \
-    PATH="/app/bin:$PATH" \
-    VIRTUAL_ENV="/app"
+    PYTHONUNBUFFERED=1
 
-COPY --from=builder /app /app
 COPY rootfs/ /
 
 WORKDIR /config
 
-RUN touch /config/config.yml \
+RUN apt-get update \
+ && apt-get install -y --no-install-recommends build-essential python3-dev \
+ && python3 -m pip --no-cache-dir install flexget transmission-rpc \
+ && apt-get purge -y build-essential python3-dev \
+ && apt-get autoremove --purge -y \
+ && rm -f /var/lib/apt/lists/*.* \
+ && touch /config/config.yml \
  && chown -R nobody:nogroup /config
 
 USER nobody
 
 EXPOSE 3539
 
-VOLUME ["/config"]
+VOLUME ["/config", "/media"]
 
 ENTRYPOINT ["/entrypoint.sh"]
