--- a/.github/workflows/docker-trusted-cgi.yml
+++ b/.github/workflows/docker-trusted-cgi.yml
@@ -1,6 +1,12 @@
 name: trusted-cgi
 
 on:
+  workflow_dispatch:
+    inputs:
+      buildImage:
+        description: 'Build Docker image by request'
+        default: true
+        required: true
   schedule:
     - cron: '27 5 * * 6'
   push:
@@ -29,7 +35,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      
+
       # Build and push Docker images with Buildx
       # https://github.com/docker/build-push-action
       - name: Setup Docker buildx
