--- a/.github/workflows/docker-trusted-cgi.yml
+++ b/.github/workflows/docker-trusted-cgi.yml
@@ -1,20 +1,15 @@
-name: trusted-cgi
+name: Build trusted-cgi
 
 on:
   workflow_dispatch:
-    inputs:
-      buildImage:
-        description: 'Build Docker image by request'
-        default: true
-        required: true
   schedule:
     - cron: '27 5 * * 6'
   push:
     branches:
     - master
     paths:
-    - '${{ github.workflow }}/Dockerfile'
-    - '.github/workflows/docker-${{ github.workflow }}.yml'
+    - 'trusted-cgi/Dockerfile'
+    - '.github/workflows/docker-trusted-cgi.yml'
 
 env:
   # Use docker.io for Docker Hub if empty
