--- a/.github/workflows/docker-trusted-cgi.yml
+++ b/.github/workflows/docker-trusted-cgi.yml
@@ -14,7 +14,7 @@ on:
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository_owner }}/${{ github.workflow }}
+  IMAGE_NAME: ${{ github.repository_owner }}/trusted-cgi
 
 jobs:
   build:
