--- a/.github/workflows/docker-trusted-cgi.yml
+++ b/.github/workflows/docker-trusted-cgi.yml
@@ -14,12 +14,13 @@ on:
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
-  CONTAINER_NAME: trusted-cgi
+  CONTEXT_PATH: ./trusted-cgi
   IMAGE_NAME: ${{ github.repository_owner }}/trusted-cgi
 
 jobs:
   build:
 
+    name: Build Docker image
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -31,6 +32,11 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Get the version
+        id: get_version
+        run: |-
+          awk -F= '/_VER(SION)?=/ {gsub(/[vV]/, X); print "::set-output name=VERSION::"$2;}' ${{ env.CONTEXT_PATH }}/Dockerfile
 
       # Build and push Docker images with Buildx
       # https://github.com/docker/build-push-action
@@ -54,6 +60,11 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref
+            type=schedule,pattern={{date 'YYYYMMDD'}}
+            type=raw,value=${{ steps.get_version.outputs.VERSION }}
+          flavor: latest=true
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
@@ -61,7 +72,7 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@v3
         with:
-          context: ./${{ env.CONTAINER_NAME }}
+          context: ${{ env.CONTEXT_PATH }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
