--- a/.github/workflows/docker-trusted-cgi.yml
+++ b/.github/workflows/docker-trusted-cgi.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Get the version
         id: get_version
         run: |-
-          awk -F= '/_VER(SION)?=/ {gsub(/[vV]/, X); print "::set-output name=VERSION::"$2;}' ${{ env.CONTEXT_PATH }}/Dockerfile
+          awk -F= '/_VER(SION)?=/ {gsub(/[vV]/, X); print "TAG_VER="$2;}' ${{ env.CONTEXT_PATH }}/Dockerfile >> $GITHUB_ENV
 
       # Build and push Docker images with Buildx
       # https://github.com/docker/build-push-action
@@ -61,9 +61,9 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=ref,event=branch
             type=schedule,pattern={{date 'YYYYMMDD'}}
-            type=raw,value=${{ steps.get_version.outputs.VERSION }}
+            type=semver,value=${{ env.TAG_VER }}
+            type=ref,event=branch
           flavor: latest=true
 
       # Build and push Docker image with Buildx (don't push on PR)
