--- a/.github/workflows/docker-image-transmission.yml
+++ b/.github/workflows/docker-image-transmission.yml
@@ -37,7 +37,7 @@ jobs:
         id: get_version
         run: >-
           curl -s 'https://repology.org/badge/version-for-repo/alpine_3_16/transmission.svg' |
-          awk '{gsub(/<[^>]*>/, " "); print $(NF-1)}' >> $GITHUB_ENV
+          awk '{gsub(/<[^>]*>/, " "); print "TAG_VER="$(NF-1)}' >> $GITHUB_ENV
 
       # Build and push Docker images with Buildx
       # https://github.com/docker/build-push-action
