--- a/.github/workflows/docker-image-transmission.yml
+++ b/.github/workflows/docker-image-transmission.yml
@@ -2,6 +2,11 @@ name: Build transmission image
 
 on:
   workflow_dispatch:
+    inputs:
+      buildArgs:
+        description: 'Pass --build-arg to docker build'
+        default: ''
+        required: false
   schedule:
     - cron: "27 5 * * 6"
   push:
@@ -37,6 +42,14 @@ jobs:
         run: >-
           curl -s 'https://repology.org/badge/version-for-repo/alpine_3_16/transmission.svg' |
           awk '{gsub(/<[^>]*>/, " "); print "TAG_VER="$(NF-1)}' >> $GITHUB_ENV
+
+      - name: Get the version from buildArgs
+        if: (github.event_name == 'workflow_dispatch') && (github.event.inputs.buildArgs != '')
+        id: get_version_build_args
+        # NOTE: build arg *_VER[SION]= should be passed first
+        run: >-
+          awk -F= '/_VER(SION)?=/ {if ($2 != "" ) print "TAG_VER="$2;}'
+          <<< ${{ github.event.inputs.buildArgs }} >> $GITHUB_ENV
 
       # Build and push Docker images with Buildx
       # https://github.com/docker/build-push-action
@@ -74,6 +87,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ${{ env.CONTEXT_PATH }}
+          build-args: ${{ github.event.inputs.buildArgs }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
