--- a/.github/workflows/docker-image-transmission.yml
+++ b/.github/workflows/docker-image-transmission.yml
@@ -37,10 +37,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Get Alpine image version
+        id: get_alpine_version
+        run: >-
+          curl 'https://img.shields.io/docker/v/_/alpine?arch=amd64' |
+          awk -Fv '{gsub(/<[^>]*>/, " "); print "ALPINE_VER="$(NF-1)}'
+          >> $GITHUB_ENV
+
       - name: Get the version
         id: get_version
         run: >-
-          curl -s 'https://repology.org/badge/version-for-repo/alpine_3_16/transmission.svg' |
+          curl -s 'https://repology.org/badge/version-for-repo/alpine_$(echo ${ALPINE_VER//./_} | cut -d_ -f-2)/transmission.svg' |
           awk '{gsub(/<[^>]*>/, " "); print "TAG_VER="$(NF-1)}' >> $GITHUB_ENV
 
       - name: Get the version from buildArgs
@@ -79,6 +86,10 @@ jobs:
             type=schedule,priority=700,pattern={{date 'YYYYMMDD'}}
             type=ref,priority=600,event=branch,enable=${{ github.event_name == 'push' }}
           flavor: latest=true
+          labels: |
+            org.opencontainers.image.title=Transmission
+            org.opencontainers.image.description=Lightweight torrent client with WebUI
+            org.opencontainers.image.url=https://transmissionbt.com
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
